# public/swagger.json
@@ -42,7 +42,7 @@
 				"type": "object",
 				"description": "Construct a type with a set of properties K of type T"
 			},
-			"Pick_PlantDataRaw.Exclude_keyofPlantDataRaw.scrapeSuccessful-or-_id__": {
+			"Pick_PlantDataRaw.Exclude_keyofPlantDataRaw._id__": {
 				"properties": {
 					"scientificName": {
 						"type": "string"
@@ -121,6 +121,19 @@
 							"type": "string"
 						},
 						"type": "array"
+					},
+					"occurrenceIds": {
+						"items": {
+							"type": "number",
+							"format": "double"
+						},
+						"type": "array"
+					},
+					"scrapeSources": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
@@ -129,15 +142,15 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_PlantDataRaw.scrapeSuccessful-or-_id_": {
-				"$ref": "#/components/schemas/Pick_PlantDataRaw.Exclude_keyofPlantDataRaw.scrapeSuccessful-or-_id__",
+			"Omit_PlantDataRaw._id_": {
+				"$ref": "#/components/schemas/Pick_PlantDataRaw.Exclude_keyofPlantDataRaw._id__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"PlantSearchResponse": {
 				"properties": {
 					"results": {
 						"items": {
-							"$ref": "#/components/schemas/Omit_PlantDataRaw.scrapeSuccessful-or-_id_"
+							"$ref": "#/components/schemas/Omit_PlantDataRaw._id_"
 						},
 						"type": "array"
 					},
